added swagger docs for users/me
